--- a/CityExplorerV2/wwwroot/css/header.css
+++ b/CityExplorerV2/wwwroot/css/header.css
@@ -26,7 +26,7 @@ nav {
 
 .nav-button {
     background-color: transparent;
-    color: white;
+    color: black;
     border: 2px solid white;
     padding: 8px 16px;
     border-radius: 5px;
